# ros_ci

./: .gitignore  .pylintrc  .travis.local.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  after_script.sh  before_init.sh  buildspec.yml  codacy.sh  codecov.yml  package.xml  setup.py
.ci/: before_init.sh
nodes/: test_node.py
ros_ci_cpp/: CMakeLists.txt  package.xml
ros_ci_cpp/include/ros_ci_cpp_library/: ros_ci_cpp_class.h
ros_ci_cpp/src/: ros_ci_cpp_class.cpp
ros_ci_cpp/test/: test_ros_ci_cpp_class.cpp
ros_ci_python/: CMakeLists.txt  package.xml  setup.py
ros_ci_python/src/ros_ci_python/: ros_ci_class.py
ros_ci_python/test/: test_ros_ci_class.py
ros_ci_python_2/: CMakeLists.txt  package.xml  setup.py
ros_ci_python_2/src/ros_ci_python_2/: ros_ci_class_2.py
ros_ci_python_2/test/: test_ros_ci_class_2.py
src/ros_ci/: example_class.py  test_class.py
test/: .coverage  run.test  test_ci.py  test_example_class.py
