<?xml version="1.0"?>
<package format="2">
  <name>ros_ci</name>

  <version>0.0.0</version>

  <description>The simple ROS package for testing of CI tools.</description>

  <maintainer email="criis@todo.todo">criis</maintainer>
  <license>TODO</license>

<buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python-catkin-pkg</build_depend>
  <test_depend>rostest</test_depend> 
</package>