<?xml version="1.0"?>
<package format="2">
  <name>ros_ci</name>

  <version>0.0.1</version>

  <description>The simple ROS package for testing of CI tools.</description>

  <maintainer email="rafael.arrais@gmail.com">rarrais</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
</package>